<resources>
    <string name="app_name">test</string>
    <string name="title_activity_salon">salon</string>
    <string name="title_activity_jardin">jardin</string>
    <string name="title_activity_texte">texte</string>
    <string name="title_activity_ecrire">Ecrire</string>
    <string name="title_activity_salledebain">salledebain</string>
    <string name="commencer_m_moriser">Commencer à mémoriser</string>
    <string name="information">Information</string>
    <string name="Image">TODO</string>
    <string name="image">Image</string>
    <string name="commencer_memoriser">Commencer à memoriser</string>
    <string name="informations">Informations</string>
    <string name="menuinfo">menuinfo</string>
    <string name="imagesalon">imageSalon</string>
    <string name="imagesdb">imagesdb</string>
    <string name="imagejeu">imagejeu</string>
    <string name="imagejardin">imagejardin</string>
    <string name="imagecuisine">imagecuisine</string>
    <string name="imagechambre">imagechambre</string>
    <string name="todo">TODO</string>
    <string name="menucuisine">menucuisine</string>
    <string name="menusalledebain">menusalledebain</string>
    <string name="menujeu">menujeu</string>
    <string name="menusalon">menusalon</string>
    <string name="menujardin">menujardin</string>
    <string name="notification">notification</string>
    <string name="retour">retour</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="moin">-</string>
    <string name="plu">+</string>
    <string name="imageajouter">imageajouter</string>
    <string name="imagesupprimer">imagesupprimer</string>
    <string name="done">DONE</string>
    <string name="english">English</string>
    <string name="francais">Francais</string>
    <string name="changer_langue">CHANGER LANGUE</string>
    <string name="change_language">change language</string>
    <string name="start_memorizing">start memorizing</string>
    <string name="start_memorizin">START MEMORIZING</string>

    <string name="retoure">Retour</string>
    <string name="englishs">English</string>
    <string name="francaise">Francais</string>
    <string name="avec_mindmap_m_morisez_ce_que_vous_souhaitez_de_fa_on_ludique_impr_gnez_vous_des_pi_ces_et_ajoutez_dans_les_objets_des_l_ments_m_morisez">Avec MindMap, mémorisez ce que vous souhaitez de façon ludique. Imprégnez vous des pièces et ajoutez dans les objets des éléments à mémorisez !</string>
    <string name="vous_serez_surpris_par_votre_m_moire">Vous serez surpris par votre mémoire.</string>
    <string name="with_mindmap_memorise_what_ever_you_want_in_an_easy_way_immerse_yoursel_your_mindmap_world_and_feel_free_to_add_things_to_memorise">With MindMap, memorise what ever you want in an easy way. Immerse yoursel your MindMap world and feel free to add things to memorise !</string>
    <string name="you_ll_be_surprised_by_your_memory">You\'ll be surprised by your memory.</string>
    <string name="avec_midmap_m_morisez_ce_que_vous_souhaitez_de_fa_on_ludique_impr_gnez_vous_des_pi_ces_et_ajoutez_dans_les_objets_des_l_ments_m_morisez">Avec MindMap, mémorisez ce que vous souhaitez de façon ludique. Imprégnez vous des pièces et ajoutez dans les objets des éléments à mémorisez !</string>
    <string name="vous_sere_surpris_par_votre_m_moire">Vous serez surpris par votre mémoire.</string>
    <string name="with_mindmap_memorie_what_ever_you_want_in_an_easy_way_immerse_yoursel_your_mindmap_world_and_feel_free_to_add_things_to_memorise">With MindMap, memorise what ever you want in an easy way. Immerse yoursel your MindMap world and feel free to add things to memorise !</string>
    <string name="you_ll_be_surprised_by_your_memoiry">You\'ll be surprised by your memory.</string>
    <string name="retourn">RETURN</string>
</resources>
