<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="8"
    android:layout_column="8"
    app:columnCount="8"
    app:rowCount="8">

    <ImageButton
        android:id="@+id/cuisine"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menuinfo"
        android:scaleType="fitXY"
        app:layout_column="4"
        app:layout_row="0"
        app:srcCompat="@drawable/logocuisine" />

    <ImageButton
        android:id="@+id/cuisineoff"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menuinfo"
        android:scaleType="fitXY"
        android:visibility="gone"
        app:layout_column="4"
        app:layout_row="0"
        app:srcCompat="@drawable/logocuisineoff" />

    <ImageButton
        android:id="@+id/salon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menusalon"
        android:scaleType="fitXY"
        app:layout_column="4"
        app:layout_row="2"
        app:srcCompat="@drawable/logosalon" />

    <ImageButton
        android:id="@+id/jeu"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menujeu"
        android:scaleType="fitXY"
        app:layout_column="2"
        app:layout_row="2"
        app:srcCompat="@drawable/jeu" />

    <ImageButton
        android:id="@+id/jardin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menujardin"
        android:scaleType="fitXY"
        app:layout_column="2"
        app:layout_row="1"
        app:srcCompat="@drawable/logojardin" />

    <ImageButton
        android:id="@+id/chambre"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_column="4"
        app:layout_row="1"
        app:srcCompat="@drawable/chambre" />

    <ImageButton
        android:id="@+id/salledebain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menusalledebain"
        android:scaleType="fitXY"
        app:layout_column="2"
        app:layout_row="0"
        app:srcCompat="@drawable/salledebain" />

    <ImageButton
        android:id="@+id/ajouter"
        android:layout_width="134dp"
        android:layout_height="131dp"
        android:contentDescription="@string/imageajouter"
        android:scaleType="fitXY"
        app:layout_column="4"
        app:layout_row="3"
        app:srcCompat="@drawable/ajouter" />

</android.support.v7.widget.GridLayout>
