<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/inforanglais"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="397dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="51dp"
        android:text="@string/informations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_button1"
        />

    <Button
        android:id="@+id/boutonMemanglais"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="391dp"
        android:layout_marginBottom="51dp"
        android:text="@string/start_memorizin"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_button1"
        />
    <Button
        android:id="@+id/Langueanglais"
        android:layout_width="129dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/custom_button1"
        android:text="@string/change_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="242dp"
        android:layout_height="216dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="131dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/image"
        android:cropToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoprincip" />
</android.support.constraint.ConstraintLayout>