<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="8"
    android:layout_column="8"
    app:columnCount="8"
    app:rowCount="8">


    <ImageButton
        android:id="@+id/chambreanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        app:layout_column="4"
        app:layout_row="1"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/chambre" />


    <ImageButton
        android:id="@+id/chambreoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        app:layout_column="4"
        app:layout_row="1"
        android:visibility="gone"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logochambreoff" />


    <ImageButton
        android:id="@+id/cuisineanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menuinfo"
        android:scaleType="centerInside"
        app:layout_column="4"
        app:layout_row="0"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logocuisine" />

    <ImageButton
        android:id="@+id/cuisineoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menuinfo"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_column="4"
        app:layout_row="0"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logocuisineoff" />

    <ImageButton
        android:id="@+id/jardinanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menujardin"
        android:scaleType="centerInside"
        app:layout_column="2"
        app:layout_row="1"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logojardin" />

    <ImageButton
        android:id="@+id/jardinoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menujardin"
        android:scaleType="centerInside"
        app:layout_column="2"
        app:layout_row="1"
        android:visibility="gone"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logojardinoff" />


    <ImageButton
        android:id="@+id/jeuanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menujeu"
        android:scaleType="centerInside"
        app:layout_column="2"
        app:layout_row="2"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/jeu" />


    <ImageButton
        android:id="@+id/jeuoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menujeu"
        android:scaleType="centerInside"
        app:layout_column="2"
        app:layout_row="2"
        android:visibility="gone"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logojeuoff" />


    <ImageButton
        android:id="@+id/salledebainanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menusalledebain"
        android:scaleType="centerInside"
        app:layout_column="2"
        app:layout_row="0"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/salledebain" />


    <ImageButton
        android:id="@+id/salledebainoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menusalledebain"
        android:scaleType="centerInside"
        app:layout_column="2"
        app:layout_row="0"
        android:background="#FFFFFF"
        android:visibility="gone"
        app:srcCompat="@drawable/logosalledebainoff" />


    <ImageButton
        android:id="@+id/salonanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menusalon"
        android:scaleType="centerInside"
        app:layout_column="4"
        app:layout_row="2"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logosalon" />

    <ImageButton
        android:id="@+id/salonoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/menusalon"
        android:scaleType="centerInside"
        app:layout_column="4"
        app:layout_row="2"
        android:visibility="gone"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logosalonoff" />

</android.support.v7.widget.GridLayout>
