<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_row="2"
    android:layout_column="3"
    app:columnCount="3"
    app:rowCount="2"
    >

    <ImageButton
        android:id="@+id/chambreanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="2"
        android:layout_column="1"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/chambre" />


    <ImageButton
        android:id="@+id/chambreoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="2"
        android:layout_column="1"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:visibility="gone"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logochambreoff" />

    <ImageButton
        android:id="@+id/cuisineanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="3"
        android:layout_column="0"
        android:contentDescription="@string/menucuisine"
        android:scaleType="centerInside"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logocuisine" />

    <ImageButton
        android:id="@+id/cuisineoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="3"
        android:layout_column="0"
        android:contentDescription="@string/menucuisine"
        android:scaleType="centerInside"
        android:visibility="gone"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logocuisineoff" />


    <ImageButton
        android:id="@+id/salledebainanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="2"
        android:layout_column="0"
        android:contentDescription="@string/menusalledebain"
        android:scaleType="centerInside"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/salledebain" />

    <ImageButton
        android:id="@+id/salledebainoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="2"
        android:layout_column="0"
        android:contentDescription="@string/menusalledebain"
        android:scaleType="centerInside"
        android:visibility="gone"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logosalledebainoff" />

    <ImageButton
        android:id="@+id/jeuanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="3"
        android:layout_column="2"
        android:contentDescription="@string/menujeu"
        android:scaleType="centerInside"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/jeu" />

    <ImageButton
        android:id="@+id/jeuoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="3"
        android:layout_column="2"
        android:contentDescription="@string/menujeu"
        android:scaleType="centerInside"
        android:visibility="gone"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logojeuoff" />



    <ImageButton
        android:id="@+id/salonanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="2"
        android:layout_column="2"
        android:contentDescription="@string/menusalon"
        android:scaleType="centerInside"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logosalon" />

    <ImageButton
        android:id="@+id/salonoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="2"
        android:layout_column="2"
        android:contentDescription="@string/menusalon"
        android:scaleType="centerInside"
        android:visibility="gone"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logosalonoff" />

    <ImageButton
        android:id="@+id/jardinanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="3"
        android:layout_column="1"
        android:contentDescription="@string/menujardin"
        android:scaleType="centerInside"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logojardin" />

    <ImageButton
        android:id="@+id/jardinoffanglais"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_row="3"
        android:layout_column="1"
        android:contentDescription="@string/menujardin"
        android:scaleType="centerInside"
        android:visibility="gone"
        android:background="#FFFFFF"
        app:srcCompat="@drawable/logojardinoff" />


</GridLayout>